[package]
name = "credstash"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.40.0"
rusoto_kms = "0.40.0"
rusoto_dynamodb = "0.40.0"
ring = "0.16.9"
dynomite = { version = "0.5.2", features = ["uuid", "derive", "rustls"] }
uuid = "0.7.4"
